# hksj-q-floor-atlas

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
analysis/: 00_preflight.py  01_compute_unfloored.py  02_build_atlas.py  03_render_dashboard.py
data/inputs/: full_method_results.parquet  full_method_results.sha256  full_method_results.sha256.ots
docs/: AMENDMENTS.md  PREFLIGHT.md  SHIP_READINESS.md  index.html  plan.md  preregistration.md  spec.md  spec.md.ots
outputs/: atlas.csv
pages/: index.html
paper/: E156-PROTOCOL.md  methods_note.md
scripts/: fill_goldens.py  reference_compute.R  select_goldens.py
src/: dashboard.py  diff_engine.py  load_inputs.py  stratify.py  unfloored_engine.py
src/r_scripts/: hksj_unfloored.R
src/templates/: index.html.j2
tests/: conftest.py  test_dashboard.py  test_diff_engine.py  test_integration.py  test_load_inputs.py  test_stratify.py  test_unfloored_engine.py
tests/fixtures/: golden_mas.json  golden_mas.json.ots
